ensure schedule CTA works in dark mode

--- a/source/_patterns/01-atoms/links/call-to-action/_call-to-action.scss
+++ b/source/_patterns/01-atoms/links/call-to-action/_call-to-action.scss
@@ -13,6 +13,7 @@ a.button,
 [class*="-overlay"] .cta,
 [class*="headline"] .cta, 
 .block--schedule .schedule-item .cta,
+.dark-mode .block--schedule .schedule-item .cta,
 .block--quote .cta,
 .block--card .cta,
 .block--card.simple .cta,
